# cpp-design-pattern

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: BuildTypeCheck.cmake  CompileSettings.cmake  CompilerCheck.cmake  EnableTest.cmake  VcpkgBootstrap.cmake
tests/: CMakeLists.txt  helloworld.cpp
